--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Formulario</a>
+                        <a href="/formulario.html">Formulario</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
