--- a/formulario.html
+++ b/formulario.html
@@ -31,7 +31,7 @@
                         <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Formulario</a>
+                        <a href="/formulario.html" target="_selft">Formulario</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
