--- a/Blog.html
+++ b/Blog.html
@@ -24,13 +24,10 @@
             <nav id="menu">
                 <ul>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#">Formulario</a>
+                        <a href="formulario.html">Formulario</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
