--- a/article.html
+++ b/article.html
@@ -25,13 +25,13 @@
             <nav id="menu">
                 <ul>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Formulario</a>
+                        <a href="formulario.html">Formulario</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
