--- a/formulario.html
+++ b/formulario.html
@@ -25,13 +25,10 @@
             <nav id="menu">
                 <ul>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/formulario.html" target="_selft">Formulario</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
