--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
             <nav id="menu">
                 <ul>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/formulario.html">Formulario</a>
+                        <a href="formulario.html">Formulario</a>
                     </li>
                     <li>
                         <a href="#">Pagina1</a>
