--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <menu name="url_hosting" content="https://blog-prm-react.netlify.app/index.html"></menu>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="./assest/css/main.css">
     <title>Maqueta React</title>
